--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-263.3KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇨🇳 中国-531.5KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-398.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇯🇵 日本-1.18MB/s(Youtube:不良林), server: 185.172.113.102, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-4.81MB/s(Youtube:不良林), server: 120.233.151.171, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-1.20MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8010, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇺🇸 美国-3.44MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
+  - {name: 🇨🇳 中国-549.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇩🇪 德国-1.07MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇬🇧 英国-2.57MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇫🇷 法国-2.32MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇫🇷 法国-1.46MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇯🇵 日本-1.16MB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇮🇳 印度-834.9KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-263.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-531.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-398.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
       - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
 rules:
