--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.20MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8010, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇺🇸 美国-3.44MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
+  - {name: 🇨🇳 中国-360.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇭🇰 香港-1.78MB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 16b00fc9-a284-3063-90c9-de55a2b5cb61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
+  - {name: 🇨🇳 (已存活1天)中国-4.17MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-251.8KB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-549.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇦 加拿大-1.75MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.72MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.79MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇩🇪 德国-1.07MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇬🇧 英国-2.57MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
   - {name: 🇫🇷 法国-1.46MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-1.16MB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇮🇳 印度-834.9KB/s(Youtube:不良林), server: in-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: in-01.licom.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-725.4KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-725.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-725.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-725.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-725.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-725.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-725.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-360.3KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-4.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-549.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.75MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.79MB/s(Youtube:不良林)
       - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
       - 🇬🇧 英国-2.57MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.16MB/s(Youtube:不良林)
-      - 🇮🇳 印度-834.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-725.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
