--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.75MB/s(Youtube:不良林), server: 167.88.63.79, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-3.52MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: 167.88.63.79, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-325.0KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇸🇬 新加坡-3.80MB/s(Youtube:不良林), server: sg.v2yyds.cc, port: 35213, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: sg.v2yyds.cc, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.95MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-360.9KB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
+  - {name: 🇨🇳 中国-312.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-3.50MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-783.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
   - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
   - {name: 🇬🇧 英国-1.40MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
   - {name: 🇺🇸 美国-4.22MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: da866fba-02c4-11ed-ac82-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
+  - {name: 未知国家-2.70MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
+  - {name: 🇺🇸 美国-4.54MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-360.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
+      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
+      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
