--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
-  - {name: 🇨🇳 中国-312.1KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-3.50MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-783.5KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: AFU5HtqSajyI}
-  - {name: 🇺🇸 美国-3.20MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
+  - {name: 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-3.43MB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
+  - {name: 未知国家-360.9KB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
+  - {name: 🇺🇸 美国-3.35MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-3.17MB/s(Youtube:不良林), server: 120.233.151.171, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 未知国家-3.20MB/s(Youtube:不良林), server: free-godlikeanyone.koyeb.app, port: 443, type: vmess, uuid: b7b1f689-f82e-4ce4-97e7-8a8997370e44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /b7b1f689-f82e-4ce4-97e7-8a8997370e44-vmess, ws-headers: {Host: free-godlikeanyone.koyeb.app}}
   - {name: 🇬🇧 英国-1.40MB/s(Youtube:不良林), server: vpnu.loungers.cc, port: 56830, type: vmess, uuid: d2e92a19-f50c-426e-cd15-03ece7f4f3b1, alterId: 32, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws/x-ui, ws-headers: {Host: vpnu.loungers.cc}}
   - {name: 🇺🇸 美国-4.22MB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: da866fba-02c4-11ed-ac82-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
-  - {name: 未知国家-2.70MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
+  - {name: 🇺🇸 美国-2.70MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
   - {name: 🇺🇸 美国-4.54MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 未知国家-360.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 未知国家-360.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,50 +52,51 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 未知国家-360.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 未知国家-360.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 未知国家-360.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +104,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 未知国家-360.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +129,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 (已存活4天)香港-4.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.43MB/s(Youtube:不良林)
+      - 未知国家-360.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.35MB/s(Youtube:不良林)
-      - 🇨🇳 中国-312.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-783.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 未知国家-3.20MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 未知国家-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.70MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.54MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
